alignment fixes

--- a/assets/styles/minimap-icons.css
+++ b/assets/styles/minimap-icons.css
@@ -17,7 +17,7 @@
 .beastmaster         .herolist__hero__link:before { background-position: -297px -5px   }
 .bloodseeker         .herolist__hero__link:before { background-position: -339px -5px   }
 .bounty_hunter       .herolist__hero__link:before { background-position: -381px -5px   }
-.brewmaster          .herolist__hero__link:before { background-position: -5px -47px    }
+.brewmaster          .herolist__hero__link:before { background-position: -4px -47px    }
 .bristleback         .herolist__hero__link:before { background-position: -47px -47px   }
 .broodmother         .herolist__hero__link:before { background-position: -86px -47px   }
 .centaur_warrunner   .herolist__hero__link:before { background-position: -126px -47px  }
